kqed_dev4/src/objects/TRANSACTION_BATCH__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Number__c</fullName>
        <description>Unique key for the batch</description>
        <label>Batch Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <description>the GUID from the pledge to be processed</description>
        <label>GUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Id__c</fullName>
        <label>Merchant_Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Key__c</fullName>
        <label>Merchant_Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <description>The id of the pledge</description>
        <label>Opportunity_Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <description>The amount to be processed from the pledge</description>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pledge_Number__c</fullName>
        <description>The pledge number from the pledge</description>
        <label>Pledge Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_date__c</fullName>
        <description>The date the batch is being processed</description>
        <label>Process Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response_Code__c</fullName>
        <label>Response_Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Message__c</fullName>
        <description>If the payment is rejected what is the message</description>
        <label>Response_Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status has the payment been sent and a response received from Sage</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>SUCCESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLOSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROCESS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submit_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>How many times the payment has been submitted for processing</description>
        <label>Submit_Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>REFUND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAYMENT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>TRANSACTION_BATCH</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TRANSACTION_BATCH Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TRANSACTION_BATCHS</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>